--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-inline-source": "^3.1.0",
     "gulp-jshint": "^2.0.4",
     "gulp-minify-css": "^1.2.4",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
     "gulp-uglify": "^3.0.0",
